--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -4,6 +4,17 @@
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
-
+    <!--해당 일 색-->
+    <style name="CalenderViewCustom" parent="Theme.AppCompat">
+        <item name="colorControlActivated">#8784FF</item>
+        <item name="android:textColorPrimary">@color/black</item>
+    </style>
+    <!--요일 색-->
+    <style name="CalenderViewWeekCustomText" parent="android:TextAppearance.DeviceDefault.Small">
+        <item name="android:textColor">@color/black</item>
+    </style>
+    <style name="CalenderViewDateCustomText">
+        <item name="android:textColor">@drawable/selector</item>
+    </style>
     <style name="Theme.MobileSoftware" parent="Base.Theme.MobileSoftware" />
 </resources>
