--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -1,25 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical" >
+    android:layout_height="match_parent"
+    tools:context=".CalendarFragment">
 
     <CalendarView
         android:id="@+id/calendarView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
         android:dateTextAppearance="@style/CalenderViewDateCustomText"
         android:theme="@style/CalenderViewCustom"
-        android:weekDayTextAppearance="@style/CalenderViewWeekCustomText"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.488"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:weekDayTextAppearance="@style/CalenderViewWeekCustomText" />
 
     <!--    <TextView
             android:id="@+id/diaryTextView"
@@ -30,29 +22,25 @@
             app:layout_constraintTop_toBottomOf="@+id/calendarView" app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
-            android:layout_marginStart="8dp" android:textAppearance="@style/TextAppearance.AppCompat.Large"/>-->
+            android:layout_marginStart="8dp" android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
 
     <EditText
         android:id="@+id/contextEditText"
         android:layout_width="0dp"
         android:layout_height="116dp"
         android:inputType="textMultiLine"
-        android:ems="10"
-        app:layout_constraintTop_toBottomOf="@+id/calendarView" android:layout_marginTop="16dp"
-        android:hint="내용을 입력하세요." android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
+        android:ems="10" android:layout_marginTop="16dp"
+        android:hint="내용을 입력하세요." android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp" android:layout_marginStart="8dp"
-        app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
+        android:layout_marginLeft="8dp"
         android:visibility="invisible"/>
 
     <TextView
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:id="@+id/diaryContent"
-        app:layout_constraintTop_toTopOf="@+id/contextEditText"
-        app:layout_constraintBottom_toBottomOf="@+id/contextEditText"
-        app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
-        app:layout_constraintStart_toStartOf="@+id/contextEditText" android:layout_marginLeft="8dp"
+        android:layout_marginLeft="8dp"
         android:layout_marginStart="8dp" android:visibility="invisible"/>
 
     <Button
@@ -62,11 +50,8 @@
         android:layout_height="wrap_content"
         android:id="@+id/saveBtn"
         android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@+id/contextEditText"
-        app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        app:layout_constraintStart_toStartOf="parent"
         android:layout_marginLeft="8dp"
         android:layout_marginStart="8dp"
         android:visibility="invisible"/>
@@ -76,11 +61,8 @@
         android:layout_width="180dp"
         android:layout_height="wrap_content"
         android:id="@+id/updateBtn"
-        app:layout_constraintBaseline_toBaselineOf="@+id/saveBtn"
-        app:layout_constraintStart_toStartOf="parent"
         android:layout_marginLeft="8dp"
         android:layout_marginStart="8dp"
-        app:layout_constraintEnd_toStartOf="@+id/deleteBtn"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:visibility="invisible"/>
@@ -90,11 +72,9 @@
         android:layout_width="176dp"
         android:layout_height="wrap_content"
         android:id="@+id/deleteBtn"
-        app:layout_constraintBaseline_toBaselineOf="@+id/updateBtn"
-        app:layout_constraintEnd_toEndOf="@+id/saveBtn"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:visibility="invisible">
     </Button>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+-->
+</FrameLayout>
