--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,8 +1,10 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.MobileSoftware" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+    <style name="Base.Theme.MobileSoftware" parent="Theme.AppCompat.DayNight">
+        <item name="android:statusBarColor" tools:targetApi="l">#14285C</item>
+        <item name="colorPrimary">#6F7BE4</item>
+        <item name="colorSecondary">#FBD76A</item>
+        <item name="colorOnSecondary">#4C8AB8</item>
     </style>
     <!--해당 일 색-->
     <style name="CalenderViewCustom" parent="Theme.AppCompat">
