--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -1,46 +1,74 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<!-- 상단: 탭 , 하단: 리사이클러 뷰로 구성-->
+<!--캘린더가 있고 밑에 사진을 선택하면 사진과 기록 추가 가능,
+    com.google.android.material.appbar.CollapsingToolbarLayout 로 구성?-->
+<!--파일 이름 미리 정해놓기. 발표 5~10분으로 예상. 목욜마다 점검-->
+
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".CalendarFragment">
+    android:layout_height="wrap_content"
+    android:orientation="vertical" >
 
     <CalendarView
-        android:id="@+id/calendarView"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:dateTextAppearance="@style/CalenderViewDateCustomText"
-        android:theme="@style/CalenderViewCustom"
-        android:weekDayTextAppearance="@style/CalenderViewWeekCustomText" />
-    <!--    <TextView
-            android:id="@+id/diaryTextView"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:gravity= "center"
-            android:layout_marginTop="16dp"
-            app:layout_constraintTop_toBottomOf="@+id/calendarView" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
-            android:layout_marginStart="8dp" android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
+        android:id="@+id/calendarView"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
+        app:layout_constraintHorizontal_bias="0.488" android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/title"/>
+
+    <TextView
+        android:id="@+id/diaryTextView"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:gravity= "center"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toBottomOf="@+id/calendarView" app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
+        app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
+        android:layout_marginStart="8dp" android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
 
     <EditText
         android:id="@+id/contextEditText"
         android:layout_width="0dp"
         android:layout_height="116dp"
         android:inputType="textMultiLine"
-        android:ems="10" android:layout_marginTop="16dp"
-        android:hint="내용을 입력하세요." android:layout_marginEnd="8dp"
+        android:ems="10"
+        app:layout_constraintTop_toBottomOf="@+id/diaryTextView" android:layout_marginTop="16dp"
+        android:hint="내용을 입력하세요." android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginRight="8dp" android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
+        app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
         android:visibility="invisible"/>
 
     <TextView
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:id="@+id/diaryContent"
+        app:layout_constraintTop_toTopOf="@+id/contextEditText"
+        app:layout_constraintBottom_toBottomOf="@+id/contextEditText"
+        app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
-        android:layout_marginLeft="8dp"
+        app:layout_constraintStart_toStartOf="@+id/contextEditText" android:layout_marginLeft="8dp"
         android:layout_marginStart="8dp" android:visibility="invisible"/>
+
+    <TextView
+        android:id="@+id/title"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:gravity="center"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:textColor="#9E28B3"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:text="저장"
@@ -49,8 +77,11 @@
         android:layout_height="wrap_content"
         android:id="@+id/saveBtn"
         android:layout_marginTop="16dp"
+        app:layout_constraintTop_toBottomOf="@+id/contextEditText"
+        app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
+        app:layout_constraintStart_toStartOf="parent"
         android:layout_marginLeft="8dp"
         android:layout_marginStart="8dp"
         android:visibility="invisible"/>
@@ -60,8 +91,11 @@
         android:layout_width="180dp"
         android:layout_height="wrap_content"
         android:id="@+id/updateBtn"
+        app:layout_constraintBaseline_toBaselineOf="@+id/saveBtn"
+        app:layout_constraintStart_toStartOf="parent"
         android:layout_marginLeft="8dp"
         android:layout_marginStart="8dp"
+        app:layout_constraintEnd_toStartOf="@+id/deleteBtn"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:visibility="invisible"/>
@@ -71,9 +105,11 @@
         android:layout_width="176dp"
         android:layout_height="wrap_content"
         android:id="@+id/deleteBtn"
+        app:layout_constraintBaseline_toBaselineOf="@+id/updateBtn"
+        app:layout_constraintEnd_toEndOf="@+id/saveBtn"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:visibility="invisible">
     </Button>
--->
-</FrameLayout>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
