--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MapFragment">
-    <TextView
+
+    <fragment
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="map_fragment" />
-
-</FrameLayout>
+        android:id="@+id/map"
+        android:name="com.google.android.gms.maps.SupportMapFragment" />
+</LinearLayout>
