--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -4,6 +4,12 @@
         <!-- Customize your dark theme here. -->
         <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
     </style>
+    <style name ="myBtn" parent="Theme.Material3.DayNight.NoActionBar">
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">16dp</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:background">@drawable/my_btn</item>
+    </style>
     <!--해당 일 색-->
     <style name="CalenderViewCustom" parent="Theme.AppCompat">
         <item name="colorControlActivated">#8784FF</item>
