--- a/app/src/main/res/layout/navigation_header.xml
+++ b/app/src/main/res/layout/navigation_header.xml
@@ -7,17 +7,21 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="horizontal">
+        android:orientation="vertical">
 
         <ImageView
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:layout_gravity="center"
+            android:paddingTop="40dp"
             android:src="@drawable/account_circle"/>
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="이름넣기"
+            android:paddingTop="20dp"
+            android:paddingBottom="10dp"
+            android:text="이름 받아와서 넣기"
             android:textAlignment="center"
             android:gravity="center"/>
     </LinearLayout>
