--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/edit_profile"
-        android:icon="@drawable/ic_launcher_foreground"
-        android:title="프로필변경(@string에 넣기)"/>
+        android:icon="@drawable/account_circle"
+        android:title="@string/nav1"/>
 
     <item android:id="@+id/setting"
-        android:icon="@drawable/ic_launcher_foreground"
-        android:title="설정(@string에 넣기)"/>
+        android:icon="@drawable/setting"
+        android:title="@string/nav2"/>
 
     <item android:id="@+id/logout"
-        android:icon="@drawable/ic_launcher_foreground"
-        android:title="로그아웃(@string에 넣기)"/>
+        android:icon="@drawable/logout"
+        android:title="@string/nav3"/>
 </menu>
