--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.MobileSoftware" parent="Theme.AppCompat.DayNight">
+    <style name="Base.Theme.MobileSoftware" parent="Theme.MaterialComponents.Light.DarkActionBar">
         <item name="android:statusBarColor" tools:targetApi="l">#14285C</item>
         <item name="colorPrimary">#8784FF</item>
         <item name="colorSecondary">#FBD76A</item>
