--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -45,7 +45,7 @@
         android:layout_marginBottom="66dp"
         android:inputType="textPassword" />
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/loginBtn"
         android:layout_width="290dp"
         android:layout_height="62dp"
@@ -54,7 +54,7 @@
         android:text="@string/login"
         style="@style/myBtn" />
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/signBtn"
         android:layout_width="290dp"
         android:layout_height="62dp"
