--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/drawer">
+    android:id="@+id/drawer"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -15,25 +15,25 @@
             android:id="@+id/frameLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
             android:layout_weight="1"
-            />
+            android:orientation="vertical" />
+
         <com.google.android.material.bottomnavigation.BottomNavigationView
             android:id="@+id/bottomNav"
             android:layout_width="match_parent"
             android:layout_height="56dp"
-            app:labelVisibilityMode="unlabeled"
             app:backgroundTint="#8784FF"
-            app:itemIconTint="@drawable/selector1"
             app:itemActiveIndicatorStyle="@android:color/transparent"
-            app:menu="@menu/my_navigation_items"/>
+            app:itemIconTint="@drawable/selector1"
+            app:labelVisibilityMode="unlabeled"
+            app:menu="@menu/my_navigation_items" />
     </LinearLayout>
 
     <com.google.android.material.navigation.NavigationView
+        android:id="@+id/main_drawer_view"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:id="@+id/main_drawer_view"
         android:layout_gravity="start"
         app:headerLayout="@layout/navigation_header"
-        app:menu="@menu/navigation_menu"/>
+        app:menu="@menu/navigation_menu" />
 </androidx.drawerlayout.widget.DrawerLayout>
