--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,62 +5,63 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
-    tools:context=".MainActivity"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context=".MainActivity">
+
     <TextView
         android:layout_width="132dp"
         android:layout_height="wrap_content"
-        android:text="Login"
-        android:gravity="center"
-        android:textSize="50dp"
-        android:textStyle="bold"
         android:layout_marginTop="60dp"
         android:layout_marginBottom="50dp"
-        />
+        android:gravity="center"
+        android:text="Login"
+        android:textSize="50dp"
+        android:textStyle="bold" />
+
     <EditText
         android:id="@+id/inputEmail"
         android:layout_width="263dp"
         android:layout_height="50dp"
-        android:backgroundTint="#F6F6F6"
-        android:hint="@string/logEmail"
-        android:textSize="14dp"
+        android:layout_marginBottom="29dp"
         android:background="@color/black"
+        android:backgroundTint="#F6F6F6"
+        android:ems="10"
+        android:hint="@string/logEmail"
+        android:inputType="text"
         android:strokeWidth="2"
         android:strokeColor="#E8E8E8"
-        android:inputType="text"
-        android:layout_marginBottom="29dp"
-        android:ems="10" />
+        android:textSize="14dp" />
 
     <EditText
         android:id="@+id/inputPassword"
         android:layout_width="263dp"
         android:layout_height="50dp"
-        android:hint="@string/logPass"
-        android:textSize="14dp"
-        android:backgroundTint="#F6F6F6"
+        android:layout_marginBottom="66dp"
         android:background="@color/black"
+        android:backgroundTint="#F6F6F6"
+        android:ems="10"
+        android:hint="@string/logPass"
+        android:inputType="textPassword"
         android:strokeWidth="2"
         android:strokeColor="#E8E8E8"
-        android:ems="10"
-        android:layout_marginBottom="66dp"
-        android:inputType="textPassword" />
+        android:textSize="14dp" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/loginBtn"
+        style="@style/myBtn"
         android:layout_width="290dp"
         android:layout_height="62dp"
         android:layout_marginBottom="18dp"
         android:backgroundTint="#B1BDFF"
-        android:text="@string/login"
-        style="@style/myBtn" />
+        android:text="@string/login" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/signBtn"
+        style="@style/myBtn"
         android:layout_width="290dp"
         android:layout_height="62dp"
-        android:textColor="@color/white"
         android:backgroundTint="#B9BAC1"
         android:text="@string/signUp"
-        style="@style/myBtn" />
+        android:textColor="@color/white" />
 
 </LinearLayout>
