--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -6,80 +6,89 @@
     android:layout_height="match_parent"
     android:background="#EDEDED"
     tools:context=".CalendarFragment">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
+
         <CalendarView
             android:id="@+id/calendarView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@color/white"
             android:dateTextAppearance="@style/CalenderViewDateCustomText"
             android:theme="@style/CalenderViewCustom"
-            android:background="@color/white"
             android:weekDayTextAppearance="@style/CalenderViewWeekCustomText" />
+
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
+
             <ImageView
                 android:id="@+id/recordImage"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
+                android:layout_height="match_parent" />
+
             <TextView
                 android:id="@+id/recordTime"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textStyle="bold"
-                android:textSize="45dp"
-                android:textColor="#5C5C5C"
-                android:text="00:00"
-                android:visibility="invisible"
+                android:layout_marginLeft="20dp"
                 android:layout_marginTop="15dp"
-                android:layout_marginLeft="20dp"/>
+                android:text="00:00"
+                android:textColor="#5C5C5C"
+                android:textSize="45dp"
+                android:textStyle="bold"
+                android:visibility="invisible" />
+
             <TextView
                 android:id="@+id/recordDist"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textStyle="bold"
-                android:textSize="45dp"
-                android:visibility="invisible"
-                android:textColor="#5C5C5C"
-                android:text="0 KM"
+                android:layout_marginLeft="20dp"
                 android:layout_marginTop="75dp"
-                android:layout_marginLeft="20dp"/>
+                android:text="0 KM"
+                android:textColor="#5C5C5C"
+                android:textSize="45dp"
+                android:textStyle="bold"
+                android:visibility="invisible" />
         </FrameLayout>
     </LinearLayout>
+
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fabRemove"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="end|bottom"
         android:layout_margin="16dp"
+        android:backgroundTint="#9896FF"
         android:src="@drawable/ic_delete"
-        app:borderWidth="0dp"
         android:visibility="invisible"
-        app:tint="@android:color/white"
-        android:backgroundTint="#9896FF"/>
+        app:borderWidth="0dp"
+        app:tint="@android:color/white" />
+
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fabEdit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="end|bottom"
         android:layout_margin="16dp"
+        android:backgroundTint="#9896FF"
         android:src="@drawable/ic_edit"
-        app:borderWidth="0dp"
         android:visibility="invisible"
-        app:tint="@android:color/white"
-        android:backgroundTint="#9896FF"/>
+        app:borderWidth="0dp"
+        app:tint="@android:color/white" />
+
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fabMain"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="end|bottom"
         android:layout_margin="16dp"
+        android:backgroundTint="#8784FF"
         android:src="@drawable/ic_add"
-        app:borderWidth="0dp"
         android:visibility="invisible"
-        app:tint="@android:color/white"
-        android:backgroundTint="#8784FF"/>
+        app:borderWidth="0dp"
+        app:tint="@android:color/white" />
 </FrameLayout>
