--- a/app/src/main/res/layout/fragment_edit_profile.xml
+++ b/app/src/main/res/layout/fragment_edit_profile.xml
@@ -1,102 +1,110 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:gravity="center"
+    android:orientation="vertical"
     tools:context=".EditProfileFragment">
 
     <androidx.cardview.widget.CardView
         android:layout_width="150dp"
         android:layout_height="150dp"
-        app:cardCornerRadius="75dp"
-        app:cardElevation="0dp"
         android:layout_marginTop="15dp"
-        android:layout_marginBottom="5dp">
+        android:layout_marginBottom="5dp"
+        app:cardCornerRadius="75dp"
+        app:cardElevation="0dp">
         <!--이미지 뷰 소스 나중에 변경하기 -> firestore에서 가져온 사진 uri-->
         <ImageView
             android:id="@+id/addProfile"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:src="@drawable/account_circle"
-            android:scaleType="centerCrop" />
+            android:scaleType="centerCrop"
+            android:src="@drawable/account_circle" />
     </androidx.cardview.widget.CardView>
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="25dp"
-        >
+        android:layout_marginBottom="25dp">
+
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_photo"
             android:layout_marginTop="5dp"
             android:layout_marginRight="5dp"
-            />
+            android:src="@drawable/ic_photo" />
+
         <TextView
             android:id="@+id/changeProfile"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/addProfile"/>
+            android:text="@string/addProfile" />
+
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/changeProfileBtn"
+            style="@style/myBtn"
             android:layout_width="30dp"
             android:layout_height="28dp"
-            android:textColor="@color/white"
             android:layout_marginLeft="10dp"
+            android:backgroundTint="#B9BAC1"
             android:drawableStart="@drawable/ic_check"
             android:paddingStart="2dp"
-            android:backgroundTint="#B9BAC1"
-            style="@style/myBtn"/>
+            android:textColor="@color/white" />
         />
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
-    <EditText
-        android:id="@+id/inputNick"
-        android:layout_width="160dp"
-        android:layout_height="50dp"
-        android:layout_marginBottom="18dp"
-        android:textSize="14dp"
-        android:ems="10"
-        android:inputType="text"
-        android:hint="@string/signNickname" />
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/editNick"
-        android:layout_width="70dp"
-        android:layout_height="45dp"
-        android:textColor="@color/white"
-        android:backgroundTint="#B9BAC1"
-        android:text="@string/edit"
-        style="@style/myBtn"/>
+
+        <EditText
+            android:id="@+id/inputNick"
+            android:layout_width="160dp"
+            android:layout_height="50dp"
+            android:layout_marginBottom="18dp"
+            android:ems="10"
+            android:hint="@string/signNickname"
+            android:inputType="text"
+            android:textSize="14dp" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/editNick"
+            style="@style/myBtn"
+            android:layout_width="70dp"
+            android:layout_height="45dp"
+            android:backgroundTint="#B9BAC1"
+            android:text="@string/edit"
+            android:textColor="@color/white" />
     </LinearLayout>
+
     <EditText
         android:id="@+id/inputPassword"
         android:layout_width="230dp"
         android:layout_height="50dp"
         android:layout_marginBottom="18dp"
-        android:textSize="14dp"
         android:ems="10"
+        android:hint="@string/signPass"
         android:inputType="textPassword"
-        android:hint="@string/signPass" />
+        android:textSize="14dp" />
+
     <EditText
         android:id="@+id/inputConfirm"
         android:layout_width="230dp"
         android:layout_height="50dp"
         android:layout_marginBottom="30dp"
-        android:textSize="14dp"
         android:ems="10"
+        android:hint="@string/signConfirm"
         android:inputType="textPassword"
-        android:hint="@string/signConfirm" />
+        android:textSize="14dp" />
+
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/editPass"
+        style="@style/myBtn"
         android:layout_width="230dp"
         android:layout_height="62dp"
-        android:textColor="@color/white"
         android:backgroundTint="#B9BAC1"
         android:text="@string/editPass"
-        style="@style/myBtn"/>
+        android:textColor="@color/white" />
 </LinearLayout>
