--- a/app/src/main/res/layout/fragment_rank.xml
+++ b/app/src/main/res/layout/fragment_rank.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/rank"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:id="@+id/rank">
+    android:layout_height="match_parent">
+
     <TextView
         android:id="@+id/weekly"
         android:layout_width="wrap_content"
@@ -13,14 +15,14 @@
         android:textSize="50sp" />
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_profile"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/rv_profile"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         android:orientation="vertical"
-        tools:listitem="@layout/item_recycler_ex"
-        app:layout_constraintTop_toBottomOf="@id/weekly"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"/>
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/weekly"
+        tools:listitem="@layout/item_recycler_ex" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
