--- a/app/src/main/res/layout/fragment_run.xml
+++ b/app/src/main/res/layout/fragment_run.xml
@@ -1,56 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".MainActivity">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="music"
         android:layout_alignParentLeft="true"
         android:layout_marginLeft="85dp"
-        android:textStyle="bold"
+        android:layout_marginTop="90dp"
+        android:text="music"
         android:textSize="20sp"
-        android:layout_marginTop="90dp" />
+        android:textStyle="bold" />
 
     <ImageButton
+        android:id="@+id/buttonPlay"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@android:drawable/ic_media_play"
-        android:id="@+id/buttonPlay"
         android:layout_alignParentLeft="true"
         android:layout_marginLeft="150dp"
-        android:layout_marginTop="80dp"/>
+        android:layout_marginTop="80dp"
+        android:src="@android:drawable/ic_media_play" />
 
     <ImageButton
+        android:id="@+id/buttonStop"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/buttonStop"
-        android:src="@android:drawable/ic_media_pause"
         android:layout_alignParentRight="true"
+        android:layout_marginTop="80dp"
         android:layout_marginRight="150dp"
-        android:layout_marginTop="80dp"/>
+        android:src="@android:drawable/ic_media_pause" />
 
     <TextView
         android:id="@+id/elapsedTimeTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="100dp"
         android:text=""
         android:textSize="20sp"
-        android:layout_marginTop="100dp"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_marginTop="80dp">
+        android:layout_marginTop="80dp"
+        android:orientation="vertical">
 
         <Chronometer
             android:id="@+id/chronometer"
@@ -64,10 +63,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
-            android:gravity="center_horizontal"
-            android:orientation="horizontal"
             android:layout_marginTop="40dp"
-            >
+            android:gravity="center_horizontal"
+            android:orientation="horizontal">
 
             <Button
                 android:id="@+id/startButton"
@@ -93,53 +91,51 @@
 
 
         <LinearLayout
+            android:id="@+id/weather"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:id="@+id/weather"
             android:layout_below="@+id/chronometer"
+            android:layout_marginLeft="40dp"
             android:layout_marginTop="50dp"
-            android:layout_marginLeft="40dp">
+            android:orientation="horizontal">
 
             <TextView
-                android:layout_marginLeft="25dp"
                 android:id="@+id/cityText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_marginLeft="25dp"
                 android:textSize="24sp"
-                android:textStyle="bold"
-                android:layout_centerHorizontal="true"/>
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/temperatureText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="36sp"
-                android:textStyle="bold"
-                android:layout_marginLeft="10dp"
                 android:layout_below="@id/cityText"
-                android:layout_centerHorizontal="true"/>
+                android:layout_centerHorizontal="true"
+                android:layout_marginLeft="10dp"
+                android:textSize="36sp"
+                android:textStyle="bold" />
+
             <TextView
                 android:id="@+id/statusText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="20sp"
                 android:layout_below="@id/weather"
                 android:layout_marginLeft="18dp"
-                />
+                android:textSize="20sp" />
         </LinearLayout>
-
 
 
         <TextView
             android:id="@+id/updatedText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="20sp"
             android:layout_below="@id/statusText"
-            android:layout_marginTop="8dp"
             android:layout_marginLeft="50dp"
-            />
+            android:layout_marginTop="8dp"
+            android:textSize="20sp" />
     </LinearLayout>
 
 </RelativeLayout>
