--- a/app/src/main/res/layout/activity_write.xml
+++ b/app/src/main/res/layout/activity_write.xml
@@ -18,7 +18,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="end"
             android:layout_marginEnd="16dp"
-            android:drawableLeft="@drawable/write"
+            android:drawableLeft="@drawable/ic_edit"
             android:text="@string/write"
             android:textColor="#fff" />
     </androidx.appcompat.widget.Toolbar>
