--- a/app/src/main/res/layout/fragment_community.xml
+++ b/app/src/main/res/layout/fragment_community.xml
@@ -34,15 +34,15 @@
         android:layout_marginRight="20dp"
         android:layout_weight="1" />
 
-    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/extendedFab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="end|bottom"
-        android:layout_marginEnd="20dp"
-        android:layout_marginBottom="20dp"
-        android:backgroundTint="#C1182287"
-        app:icon="@drawable/ic_plus" />
-
+        android:layout_margin="16dp"
+        android:backgroundTint="#8784FF"
+        android:src="@drawable/ic_add"
+        app:borderWidth="0dp"
+        app:tint="@android:color/white" />
 
 </LinearLayout>
